# ModelloPrevisionaleCalcistico

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: auto-update-documentation.mdc  sportmonks.mdc
docs/: sportmonks-football-v3-docs.md  sportmonks-football-v3-pagine.md  sportmonks-llms-index.md
scripts/: fetch_sportmonks_docs.py  generate_fixtures.py
src/: __init__.py  cli.py  cli_capabilities.py  cli_evaluate.py  cli_readiness.py  cli_status.py  cli_train.py  cli_validate.py  config.py  logging_config.py
tests/: test_ablation.py  test_anti_leakage.py  test_audit_docs.py  test_backtest_all_models.py  test_backtest_in_sample.py  test_backtest_no_leakage.py  test_cache.py  test_capabilities_cli.py  test_capabilities_integration.py  test_client.py  test_coach_adaptation.py  test_coach_capabilities.py  test_coach_explain_hardening.py  test_coach_features.py  test_coach_registry.py  test_composable_transfer.py  test_data_capabilities.py  test_data_quality.py  test_data_scope.py  test_data_sources.py  test_dixon_coles.py  test_elo.py  test_ensemble.py  test_evaluate_models_cli.py  test_feature_engineering.py  test_feature_importance.py  test_feature_policy.py  test_feature_trained_compact.py  test_feature_trained_league_isolation.py  test_feature_trained_model.py  test_features.py  test_general_transfer_adapter.py  test_league_profiles.py  test_metrics.py  test_normalize.py  test_pair_specialists.py  test_player_global_registry.py  test_player_skill_vector.py  test_player_transfer_adaptation.py  test_player_transfer_flow_audit.py  (+24 more)
(+162 files in other folders)
